--- a/RTLS/Web.config
+++ b/RTLS/Web.config
@@ -69,9 +69,14 @@
 </log4net>
   
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RTLS-20170414014054.mdf;Initial Catalog=aspnet-RTLS-20170414014054;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=RTLSNEWDB;Integrated Security=True;connect timeout=900;" providerName="System.Data.SqlClient" />
-    <add name="DbEntities" connectionString="metadata=res://*/Models.RTLSNEWDB.csdl|res://*/Models.RTLSNEWDB.ssdl|res://*/Models.RTLSNEWDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=RTLSNEWDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+    <!--Local Server Connection for RTLS Database -->
+    <add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=RTLS;Integrated Security=True;connect timeout=900;" providerName="System.Data.SqlClient" />
+    <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=RTLS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  
+    <!--Azure Server Connection for RTLS database-->
+   <!--<add name="DefaultConnection" connectionString="Data Source=airloc8-d2-dashboard.database.windows.net;Initial Catalog=RTLS;User Id=DBAdmin;Password=a1rl0c84zur3!;connect timeout=900;" providerName="System.Data.SqlClient" />
+   <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=airloc8-d2-dashboard.database.windows.net;Initial Catalog=RTLS;User Id=DBAdmin;Password=a1rl0c84zur3!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   
   <appSettings>
@@ -80,7 +85,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="BaseFatiUriAddress" value="http://172.19.255.38:9000/" />
+    <add key="BaseFatiUriAddress" value="http://airloc8:fXwmhe5uZFxj5hYK@10.38.129.170:9000/" />
+    <add key="FatiDeviceApi" value="/api/engage/v1/device_monitors/"/>
+    <add key ="sn" value="Purple Dragon"/>
+    <add key ="bn" value="Putney"/>
+    <add key ="UserName" value="airloc8"/>
+    <add key ="Password" value="fXwmhe5uZFxj5hYK"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
