--- a/RTLS/RTLS.csproj
+++ b/RTLS/RTLS.csproj
@@ -97,6 +97,10 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Pagination, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Pagination.1.0.3\lib\net451\Pagination.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
       <Private>True</Private>
@@ -112,12 +116,20 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web.Cors, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.3\lib\net45\System.Web.Cors.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Http.Cors, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Cors.5.2.3\lib\net45\System.Web.Http.Cors.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -232,6 +244,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\DeleteDeviceApiController.cs" />
+    <Compile Include="API\SaveDeviceApiController.cs" />
     <Compile Include="API\ViewDataApiController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -296,6 +310,10 @@
     <Compile Include="Migrations\201707251508404_Change_Track_Member_tbl.Designer.cs">
       <DependentUpon>201707251508404_Change_Track_Member_tbl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708010920213_added_IsDisplay_column_in_MacAddress_table.cs" />
+    <Compile Include="Migrations\201708010920213_added_IsDisplay_column_in_MacAddress_table.Designer.cs">
+      <DependentUpon>201708010920213_added_IsDisplay_column_in_MacAddress_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AppLog.cs" />
@@ -306,6 +324,7 @@
     <Compile Include="Models\LocationData.cs" />
     <Compile Include="Models\MacAddress.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PagedResultsViewModel.cs" />
     <Compile Include="Models\Record.cs" />
     <Compile Include="Models\Site.cs" />
     <Compile Include="Models\TrackMember.cs" />
@@ -327,6 +346,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\ASPSnippets_Pager.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config" />
@@ -339,6 +359,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\paging.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -434,6 +455,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707251508404_Change_Track_Member_tbl.resx">
       <DependentUpon>201707251508404_Change_Track_Member_tbl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708010920213_added_IsDisplay_column_in_MacAddress_table.resx">
+      <DependentUpon>201708010920213_added_IsDisplay_column_in_MacAddress_table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
