Generate a Migration for new database setup in Mysql and changes in web.config

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /RTLS.Domins/obj/Debug
 /RTLS.Services/obj/Debug
 /RTLS.Services/bin
+/RTLS.Domins/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
+/RTLS.Domins/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
