--- a/RTLS.Domins/RTLS.Domins.csproj
+++ b/RTLS.Domins/RTLS.Domins.csproj
@@ -31,11 +31,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
@@ -60,12 +60,12 @@
     <Compile Include="ApplicationDbContext.cs" />
     <Compile Include="AppLog.cs" />
     <Compile Include="Area.cs" />
+    <Compile Include="CaptivePortalConfiguration\Migrations\201710160301045_Initial_changes.cs" />
+    <Compile Include="CaptivePortalConfiguration\Migrations\201710160301045_Initial_changes.Designer.cs">
+      <DependentUpon>201710160301045_Initial_changes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Device.cs" />
     <Compile Include="Enums\CutomEnum.cs" />
-    <Compile Include="Migrations\201709271547326_Initial_Changes.cs" />
-    <Compile Include="Migrations\201709271547326_Initial_Changes.Designer.cs">
-      <DependentUpon>201709271547326_Initial_Changes.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ViewModels\jQueryDataTableParamModel.cs" />
     <Compile Include="LocationData.cs" />
@@ -82,11 +82,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201709271547326_Initial_Changes.resx">
-      <DependentUpon>201709271547326_Initial_Changes.cs</DependentUpon>
+    <EmbeddedResource Include="CaptivePortalConfiguration\Migrations\201710160301045_Initial_changes.resx">
+      <DependentUpon>201710160301045_Initial_changes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
