--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -6,80 +6,18 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  
-  <log4net>
-   <!--AdoNet appender is use for write log file into sql server-->
-   <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
-      <bufferSize value="0" />
-      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <connectionString name="Dafaultconnection" value="data source=.\sqlexpress;Initial Catalog=RTLSData;Integrated Security=True" />
-      <commandText value="INSERT INTO AppLog ([Date],[Thread],[Level],[Logger],[Message],[Exception]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception)" />
-      <parameter>
-         <parameterName value="@log_date" />
-         <dbType value="DateTime" />
-         <layout type="log4net.Layout.RawTimeStampLayout" />
-     </parameter>
-      <parameter>
-         <parameterName value="@thread" />
-         <dbType value="String" />
-         <size value="255" />
-         <layout type="log4net.Layout.PatternLayout">
-         <conversionPattern value="%thread" />
-      </layout>
-      </parameter>
-      <parameter>
-         <parameterName value="@log_level" />
-         <dbType value="String" />
-         <size value="50" />
-         <layout type="log4net.Layout.PatternLayout">
-            <conversionPattern value="%level" /> </layout>
-      </parameter>
-      <parameter>
-         <parameterName value="@logger" />
-         <dbType value="String" />
-         <size value="255" />
-         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%logger" /> 
-         </layout>
-      </parameter>
-      <parameter>
-         <parameterName value="@message" />
-         <dbType value="String" />
-         <size value="4000" />
-         <layout type="log4net.Layout.PatternLayout">
-            <conversionPattern value="%message" /> </layout>
-      </parameter>
-      <parameter>
-         <parameterName value="@exception" />
-         <dbType value="String" />
-         <size value="2000" />
-         <layout type="log4net.Layout.ExceptionLayout" /> </parameter>
-   </appender>
-
-   <!--Add appender which you want to use, You can add more then one appender . Like if you want save log both plain text or sql server ,Add both appender.-->
-
-   <root>
-      <level value="ALL" />
-      <appender-ref ref="AdoNetAppender" />
-      <!--Enable this line if you want write log file into sql server-->
-   </root>
-</log4net>
-  
   <connectionStrings>
-    
     <!--Local Server Connection for RTLS Database -->
-    <add name="DefaultConnection" connectionString="server=localhost;user id=root;password=abcd;persistsecurityinfo=True;database=RTLS" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost;Port=3306;Database=rtlsv1;Uid=root;Pwd=abcd" providerName="MySql.Data.MySqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=RTLS;Integrated Security=True;connect timeout=900;" providerName="System.Data.SqlClient" />
     <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=RTLS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  
     <!--Azure Server Connection for RTLS database-->
-   <!--<add name="DefaultConnection" connectionString="Data Source=airloc8-d2-dashboard.database.windows.net;Initial Catalog=RTLS;User Id=DBAdmin;Password=a1rl0c84zur3!;connect timeout=900;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=airloc8-d2-dashboard.database.windows.net;Initial Catalog=RTLS;User Id=DBAdmin;Password=a1rl0c84zur3!;connect timeout=900;" providerName="System.Data.SqlClient" />
    <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=airloc8-d2-dashboard.database.windows.net;Initial Catalog=RTLS;User Id=DBAdmin;Password=a1rl0c84zur3!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
-  
   <appSettings>
     <add key="log4net.Internal.Debug" value="true" />
     <add key="webpages:Version" value="3.0.0.0" />
@@ -160,12 +98,22 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
