Create the Services for storing the Configuration Store data

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /RTLS.Services/bin
 /RTLS.Domins/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
 /RTLS.Domins/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
+/RTLS.Business/RTLS.Business.csproj.user
