--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <connectionStrings>
     <!--Local Server Connection for RTLS Database -->
-    <add name="DefaultConnection" connectionString="server=localhost;Port=3306;Database=rtlsv1;Uid=root;Pwd=abcd" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost;user id=root;password=abcd;persistsecurityinfo=True;database=a8DbNewVersion1" providerName="MySql.Data.MySqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=RTLS;Integrated Security=True;connect timeout=900;" providerName="System.Data.SqlClient" />
     <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=RTLS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--Azure Server Connection for RTLS database-->
@@ -24,10 +24,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="BaseFatiUriAddress" value="http://airloc8:fXwmhe5uZFxj5hYK@10.38.129.170:9000/" />
-    <add key="FatiDeviceApi" value="/api/engage/v1/device_monitors/" />-->
-    <!--<add key="sn" value="Purple Dragon" />
-    <add key="bn" value="Putney" />-->
+    <add key="FatiDeviceApi" value="/api/engage/v1/device_monitors/" />
+    <add key="bn" value="Putney" />
     <add key="UserName" value="airloc8" />
     <add key="Password" value="fXwmhe5uZFxj5hYK" />
   </appSettings>
