RTLS notify upon entry into Geofenced area

--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -11,7 +11,8 @@
   </configSections>
   <connectionStrings>
     <!--Local Server Connection for RTLS Database -->
-    <add name="DefaultConnection" connectionString="server=localhost;user id=root;password=abcd;persistsecurityinfo=True;database=a8DbNewVersion1" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost;user id=root;password=root;persistsecurityinfo=True;database=a8platformdbloc" providerName="MySql.Data.MySqlClient" />
+    <!--<add name="DefaultConnection" connectionString="server=localhost;user id=root;password=abcd;persistsecurityinfo=True;database=a8DbNewVersion1" providerName="MySql.Data.MySqlClient" />-->
     <!--<add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=RTLS;Integrated Security=True;connect timeout=900;" providerName="System.Data.SqlClient" />
     <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=RTLS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--Azure Server Connection for RTLS database-->
