Design and functionality for Configure Trigger page.

--- a/RTLS.Business/RTLS.Business.csproj
+++ b/RTLS.Business/RTLS.Business.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\MacAddressRepository.cs" />
+    <Compile Include="Repository\RtlsAreaApiRepository.cs" />
     <Compile Include="Repository\RtlsConfigurationRepository.cs" />
     <Compile Include="Repository\SiteFloorRepository.cs" />
   </ItemGroup>
