--- a/RTLS.Domins/RTLS.Domins.csproj
+++ b/RTLS.Domins/RTLS.Domins.csproj
@@ -77,6 +77,7 @@
     <Compile Include="RtlsConfiguration.cs" />
     <Compile Include="TrackMember.cs" />
     <Compile Include="ViewModels\RequestLocationDataVM.cs" />
+    <Compile Include="ViewModels\Request\NotificationRequest.cs" />
     <Compile Include="ViewModels\Result.cs" />
     <Compile Include="ViewModels\RtlsAreaViewModel.cs" />
   </ItemGroup>
