--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -11,7 +11,11 @@
   </configSections>
   <connectionStrings>
     <!--Local Server Connection for RTLS Database -->
-    <add name="DefaultConnection" connectionString="server=localhost;user id=root;password=root;persistsecurityinfo=True;database=sprint_35" providerName="MySql.Data.MySqlClient" />
+
+    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8dbversion7;Allow User Variables=True" providerName="MySql.Data.MySqlClient"/>
+
+    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8dbversion7" providerName="MySql.Data.MySqlClient" />
+    
     <!--<add name="DefaultConnection" connectionString="server=localhost;user id=root;password=abcd;persistsecurityinfo=True;database=a8DbNewVersion1" providerName="MySql.Data.MySqlClient" />-->
     <!--<add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=RTLS;Integrated Security=True;connect timeout=900;" providerName="System.Data.SqlClient" />
     <add name="DbEntities" connectionString="metadata=res://*/Models.RTLS.csdl|res://*/Models.RTLS.ssdl|res://*/Models.RTLS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=RTLS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
@@ -44,14 +48,14 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-    <handlers>
+    
+    <validation validateIntegratedModeConfiguration="false" />
+  <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-    <validation validateIntegratedModeConfiguration="false" />
-  </system.webServer>
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -93,6 +97,18 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.11.0" newVersion="6.9.11.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
