Added the package missing In RTLS for Mysql.Ef6 in the project to fix the build error

--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -12,7 +12,7 @@
   <connectionStrings>
     <!--Local Server Connection for RTLS Database -->
 
-    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8dbversion7;Allow User Variables=True" providerName="MySql.Data.MySqlClient"/>
+    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8dbversion7;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
     <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8dbversion7" providerName="MySql.Data.MySqlClient" />
     
@@ -116,7 +116,7 @@
     <providers>
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
@@ -125,9 +125,9 @@
   </entityFramework>
   <system.data>
     <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" />
+      
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-    </DbProviderFactories>
+    <remove invariant="MySql.Data.MySqlClient" /><add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" /></DbProviderFactories>
   </system.data>
   <system.codedom>
     <compilers>
