--- a/RTLS.Services/packages.config
+++ b/RTLS.Services/packages.config
@@ -46,7 +46,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" targetFramework="net452" />
-  <package id="MySql.Data" version="6.9.11" targetFramework="net452" />
+  <package id="MySql.Data" version="6.9.12" targetFramework="net452" />
+  <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
