Added RtlS.Common project with Secom Login and register api changes..

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /RTLS.Domins/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
 /RTLS.Domins/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
 /RTLS.Business/RTLS.Business.csproj.user
+/RTLS.Common/bin/Debug
+/RTLS.Common/obj/Debug
