--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -12,9 +12,9 @@
   <connectionStrings>
     <!--Local Server Connection for RTLS Database -->
 
-    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8dbversion7;Allow User Variables=True" providerName="MySql.Data.MySqlClient"/>
+    <add name="A8AdminModelEntity" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=SecomAPI;Allow User Variables=True" providerName="MySql.Data.MySqlClient" />
 
-    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=abcd;persistsecurityinfo=True;database=a8dbversion7" providerName="MySql.Data.MySqlClient" />
+    <add name="DefaultConnection" connectionString="server=localhost; Uid=root;Pwd=12345;persistsecurityinfo=True;database=SecomAPI" providerName="MySql.Data.MySqlClient" />
     
     <!--<add name="DefaultConnection" connectionString="server=localhost;user id=root;password=abcd;persistsecurityinfo=True;database=a8DbNewVersion1" providerName="MySql.Data.MySqlClient" />-->
     <!--<add name="DefaultConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=RTLS;Integrated Security=True;connect timeout=900;" providerName="System.Data.SqlClient" />
@@ -33,6 +33,10 @@
     <add key="bn" value="Putney" />
     <add key="UserName" value="airloc8" />
     <add key="Password" value="fXwmhe5uZFxj5hYK" />
+    <add key="SecomAPI" value="https://api.fattiengage.com/" />
+    <add key="SecomLoginUname" value="james_clarke@secom.co.uk" />
+    <add key="SecomLoginPassword" value="96fl4d9s" />
+
   </appSettings>
   <system.web>
     <authentication mode="None" />
