Added RtlS.Common project with Secom Login and register api changes..

--- a/RTLS.Services/Web.config
+++ b/RTLS.Services/Web.config
@@ -33,6 +33,10 @@
     <add key="bn" value="Putney" />
     <add key="UserName" value="airloc8" />
     <add key="Password" value="fXwmhe5uZFxj5hYK" />
+    <add key="SecomAPI" value="https://api.fattiengage.com/" />
+    <add key="SecomLoginUname" value="james_clarke@secom.co.uk" />
+    <add key="SecomLoginPassword" value="96fl4d9s" />
+
   </appSettings>
   <system.web>
     <authentication mode="None" />
