--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,7 @@
 /RTLS.Domins/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll
 /RTLS.Domins/bin/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
 /RTLS.Business/RTLS.Business.csproj.user
+/RTLS.Common/bin/Debug
+/RTLS.Common/obj/Debug
 /RTLS.Domins/obj/Release
 /RTLS.DataAccess
