--- a/RTLS.Services/RTLS.Services.csproj
+++ b/RTLS.Services/RTLS.Services.csproj
@@ -268,6 +268,7 @@
     <Compile Include="API\RtlsAreaApiController.cs" />
     <Compile Include="API\RtlsConfigurationApiController.cs" />
     <Compile Include="API\SaveDeviceApiController.cs" />
+    <Compile Include="API\SecomApiController.cs" />
     <Compile Include="API\SiteFloorsApiController.cs" />
     <Compile Include="API\ViewDataApiController.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -323,6 +324,10 @@
     <ProjectReference Include="..\RTLS.Business\RTLS.Business.csproj">
       <Project>{EE020A70-2727-47BC-BF53-7F4ECE14F60F}</Project>
       <Name>RTLS.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RTLS.Common\RTLS.Common.csproj">
+      <Project>{8585C24D-4933-4897-8DDD-4F58651B9A1A}</Project>
+      <Name>RTLS.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\RTLS.Domins\RTLS.Domins.csproj">
       <Project>{D7B09E55-7CBD-4381-BFAC-46AD6930C4D8}</Project>
