Made changes to save the UniqueId returned after registering device to Omni

--- a/RTLS.Business/RTLS.Business.csproj
+++ b/RTLS.Business/RTLS.Business.csproj
@@ -59,6 +59,7 @@
     <Compile Include="OmniEngineBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\MacAddressRepository.cs" />
+    <Compile Include="Repository\OmniDeviceMappingRepository.cs" />
     <Compile Include="Repository\RtlsAreaApiRepository.cs" />
     <Compile Include="Repository\RtlsConfigurationRepository.cs" />
     <Compile Include="Repository\SiteFloorRepository.cs" />
