--- a/RTLS.Domins/RTLS.Domins.csproj
+++ b/RTLS.Domins/RTLS.Domins.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Identity\EmailService.cs" />
     <Compile Include="Identity\IdentityModels.cs" />
     <Compile Include="Identity\SmsService.cs" />
+    <Compile Include="OmniDeviceMapping.cs" />
     <Compile Include="RtlsArea.cs" />
     <Compile Include="Site.cs" />
     <Compile Include="SiteFloor.cs" />
